--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <ul class="list-group">
                                 <li class="list-group-item bg-dark">
                                     <label for="date">Enter Date</label>
-                                    <input type="text" placeholder="1/10/2010" id="datetime" />
+                                    <input type="text" placeholder="1/2/2010" id="datetime" />
                                 </li>
                                 <li class="list-group-item bg-dark">
                                     <label for="city">Enter a City</label>
@@ -66,7 +66,7 @@
                                 </li>
                                 <li class="list-group-item bg-dark">
                                     <label for="shape">Enter a Shape</label>
-                                    <input type="text" id="shape" class="form-control" placeholder="circle" />
+                                    <input type="text" id="shape" class="form-control" placeholder="triangle" />
                                 </li>
                             </ul>
                         </form>
